@@ -125,20 +125,14 @@ public class PrestoFilterUtil {
                 } else {
                   GreaterThanExpression greater = new GreaterThanExpression(colExpression,
                       new LiteralExpression(value, coltype));
-                  if(valueExpressionMap.get(value) == null) {
-                    valueExpressionMap.put(value, new ArrayList<>());
-                  }
-                  valueExpressionMap.get(value).add(greater);
+                  valueExpressionMap.computeIfAbsent(value, key -> new ArrayList<>()).add(greater);
                 }
                 break;
               case EXACTLY:
                 GreaterThanEqualToExpression greater =
                     new GreaterThanEqualToExpression(colExpression,
                         new LiteralExpression(value, coltype));
-                if(valueExpressionMap.get(value) == null) {
-                  valueExpressionMap.put(value, new ArrayList<>());
-                }
-                valueExpressionMap.get(value).add(greater);
+                valueExpressionMap.computeIfAbsent(value, key -> new ArrayList<>()).add(greater);
                 break;
               case BELOW:
                 throw new IllegalArgumentException("Low marker should never use BELOW bound");
@@ -154,18 +148,12 @@ public class PrestoFilterUtil {
               case EXACTLY:
                 LessThanEqualToExpression less = new LessThanEqualToExpression(colExpression,
                     new LiteralExpression(value, coltype));
-                if(valueExpressionMap.get(value) == null) {
-                  valueExpressionMap.put(value, new ArrayList<>());
-                }
-                valueExpressionMap.get(value).add(less);
+                valueExpressionMap.computeIfAbsent(value, key -> new ArrayList<>()).add(less);
                 break;
               case BELOW:
                 LessThanExpression less2 =
                     new LessThanExpression(colExpression, new LiteralExpression(value, coltype));
-                if(valueExpressionMap.get(value) == null) {
-                  valueExpressionMap.put(value, new ArrayList<>());
-                }
-                valueExpressionMap.get(value).add(less2);
+                valueExpressionMap.computeIfAbsent(value, key -> new ArrayList<>()).add(less2);
                 break;
               default:
                 throw new AssertionError("Unhandled bound: " + range.getHigh().getBound());
@@ -208,14 +196,14 @@ public class PrestoFilterUtil {
           valuefilters.add(finalFilters);
         }
 
-        if(valuefilters.size() == 1){
+        if (valuefilters.size() == 1) {
           finalFilters = valuefilters.get(0);
         } else if (valuefilters.size() >= 2) {
-         finalFilters = new AndExpression(valuefilters.get(0), valuefilters.get(1));
-         for (int i = 2; i < valuefilters.size() ; i++) {
-           finalFilters = new AndExpression(finalFilters, valuefilters.get(i));
-         }
-       }
+          finalFilters = new AndExpression(valuefilters.get(0), valuefilters.get(1));
+          for (int i = 2; i < valuefilters.size(); i++) {
+            finalFilters = new AndExpression(finalFilters, valuefilters.get(i));
+          }
+        }
 
         filters.add(finalFilters);
       }
@@ -236,8 +224,9 @@ public class PrestoFilterUtil {
   }
 
   private static Object ConvertDataByType(Object rawdata, Type type) {
-    if (type.equals(IntegerType.INTEGER)) return Integer.valueOf(rawdata.toString());
-    // new Integer((rawdata.toString()));
+    if (type.equals(IntegerType.INTEGER) || type.equals(SmallintType.SMALLINT))
+      return Integer.valueOf(rawdata.toString());
+      // new Integer((rawdata.toString()));
     else if (type.equals(BigintType.BIGINT)) return rawdata;
     else if (type.equals(VarcharType.VARCHAR)) {
       if (rawdata instanceof Slice) {
@@ -253,18 +242,18 @@ public class PrestoFilterUtil {
       c.add(Calendar.DAY_OF_YEAR, ((Long) rawdata).intValue());
       Date date = c.getTime();
       return date.getTime() * 1000;
-    }
-    else if (type instanceof DecimalType) {
-      if(rawdata instanceof  Double) {
+    } else if (type instanceof DecimalType) {
+      if (rawdata instanceof Double) {
         return new BigDecimal((Double) rawdata);
-      } else if (rawdata instanceof  Long) {
+      } else if (rawdata instanceof Long) {
         return new BigDecimal(new BigInteger(String.valueOf(rawdata)),
             ((DecimalType) type).getScale());
-      } else if(rawdata instanceof Slice) {
-        return new BigDecimal(Decimals.decodeUnscaledValue((Slice) rawdata), ((DecimalType) type).getScale());
+      } else if (rawdata instanceof Slice) {
+        return new BigDecimal(Decimals.decodeUnscaledValue((Slice) rawdata),
+            ((DecimalType) type).getScale());
       }
     } else if (type.equals(TimestampType.TIMESTAMP)) {
-      return (Long)rawdata * 1000;
+      return (Long) rawdata * 1000;
     }
 
     return rawdata;
